tests/Checker/everything/errors/3a.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *3: identifier declared void
Compilation was unsuccessful.
